syntax = "proto3";

option java_package = "gay.pyrrha.dailyxp.core.datastore";
option java_multiple_files = true;

import "gay/pyrrha/dailyxp/data/date_preiod.proto";

message QuestProto {
  string title = 1;
  map<string, bool> segments = 2;
  DatePeriod repeats = 3;
  string repeatsAt = 4;
  optional string completedAt = 5;
}
